# mlops-power-tetouan

./: .dvcignore  .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt
data/processed/: clean.csv.dvc  scaled.csv.dvc
data/raw/: power_tetouan_city_modified.csv.dvc
drift/: evaluate_drift.py  run_drift.py  simulate_drift.py
mlops-power-tetouan/: README.md  dvc.yaml  pyproject.toml
mlops-power-tetouan/docs/: mkdocs.yml
mlops-power-tetouan/docs/docs/: index.md
mlops-power-tetouan/mlops_power_tetouan/: dataset.py
mlops-power-tetouan/mlops_power_tetouan/features/: cleaning.py
mlops-power-tetouan/mlops_power_tetouan/modeling/: modeling.py
mlops-power-tetouan/mlops_power_tetouan/pipelines/: preprocess_n_save.py  run_cleaning.py  run_pca.py
mlops_power_tetouan/: dataset.py
mlops_power_tetouan/features/: data_cleaner.py  feature_engineer.py
mlops_power_tetouan/modeling/: modeling.py
mlops_power_tetouan/pipelines/: preprocess_n_save.py  run_cleaning.py  run_load.py  run_modeling.py
mlops_power_tetouan/serving/: app.py
models/: .gitignore  test_pipeline.pkl  test_scaler.pkl
notebooks/: TetouanCityPrueba1.py
scripts/: preprocess_n_save.py  run_modeling.py  run_pca.py
src/data/: clean.py  load.py
src/features/: pca.py  preprocessing.py
tests/fixtures/: small_fixture.csv
tests/integration/: test_e2e_preprocess_predict.py
tests/unit/: test_feature_generator.py  test_feature_pipeline.py  test_metrics.py  test_model_loading.py
