[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mlops_power_tetouan"
version = "0.0.1"
description = "analizar, limpiar, transformar y modelar el dataset **Power Consumption of Tetouan City** utilizando las mejores pr\u00e1cticas de MLOps"
authors = [
  { name = "Jos\u00e9 Ashamat Jaimes Saavedra" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "awscli",
    "black",
    "flake8",
    "ipython",
    "isort",
    "jupyterlab",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "scikit-learn",
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["mlops_power_tetouan"]
force_sort_within_sections = true


